# Talkyleo

./: __init__.py  pyproject.toml  requirements.txt
src/: README.md  pyproject.toml  requirements.txt  setup.py
src/leo/: .gitignore  polly_tts.py  pyproject.toml  requirements.txt  setup.py  tts.py
talkyleo/: __init__.py  polly.py  tts.py
