[build-system]
requires = [
  "setuptools>=61.0",
  "boto3==1.34.4",
  "botocore==1.34.4",
  "jmespath==1.0.1",
  "pydub==0.25.1",
  "pysub-parser==1.7.1",
  "python-dateutil==2.8.2",
  "s3transfer==0.9.0",
  "six==1.16.0",
  "unidecode==1.3.7",
  "urllib3==2.0.7",
  ]
build-backend = "setuptools.build_meta"

[project]
name = "talkyleo"
version = "0.1.9"
authors = [
  { name="Naelson Douglas", email="naelson17@gmail.com" },
]
description = "Turns lines of dialogue into TTS audio which comes with syncronized SRT subtitles."
readme = "README.md"
requires-python = ">=3.11.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "setuptools>=61.0",
  "boto3==1.34.4",
  "botocore==1.34.4",
  "jmespath==1.0.1",
  "pydub==0.25.1",
  "pysub-parser==1.7.1",
  "python-dateutil==2.8.2",
  "s3transfer==0.9.0",
  "six==1.16.0",
  "unidecode==1.3.7",
  "urllib3==2.0.7",
  ]

[project.urls]
Homepage = "https://github.com/NaelsonDouglas/Leo"
Issues = "https://github.com/NaelsonDouglas/Leo/issues"

[tool.setuptools]
py-modules = []