[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "leoleo"
version = "0.0.1"
authors = [
  { name="Naelson Douglas", email="naelson17@gmail.com" },
]
description = "Turns lines of dialogue into TTS audio which comes with syncronized SRT subtitles."
readme = "README.md"
requires-python = ">=3.11.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/NaelsonDouglas/Leo"
Issues = "https://github.com/NaelsonDouglas/Leo/issues"